# elastowaves-spectral-analysis

./: .gitignore  README.md  pyproject.toml
elastowaves_spectral_analysis/: constants.py  fem_solver.py  fem_utils.py  gmesher.py  utils.py
scripts/: compute_single_solution.py  estimate_weyls_law_analog.py  plot_eigvecs.py  run.py
scripts/check_isospectrality/: compare_eigenval_pairs.py  plot_eigvecs.py
scripts/estimate_weyls_law_analog/: area_1.py  area_10.py  area_100.py  areas_1_to_1000_100.py  areas_1_to_100_20.py  areas_1_to_100_3.py  areas_1_to_3_3.py  few_areas.py  hypothesis_different_slopes.py  more_areas.py  utils.py
