[tool.poetry]
name = "elastowaves-spectral-analysis"
version = "0.1.0"
description = ""
authors = ["José Ortiz-Ocampo <joseortiz1807@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
solidspy = "^1.1.0.post1"
ipykernel = "^6.29.4"
meshio = "3.0"
gmsh = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
